violating_resources/general/httpsonly/samples/ingress-https-only/example_allowed.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: # kpt-merge: /ingress-demo-disallowed
  name: ingress-https-only-example-allowed
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls: [{}]
  rules:
    - host: example-host.example.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx
                port:
                  number: 80
